# examples

./: .gitignore  .gitmodules  404.html  LICENSE  README.MD  README.md  examples-metadata.json
$summary/: .env.tpl  Dockerfile.dev  README.MD  docker-compose.yaml  tsconfig.json
BedaEmr/: Readme.md
OpenTelemetry/: README.MD  docker-compose.yaml  otel-collector-config.yaml
agentic-coding-ig-development/: CLAUDE.md  README.md
aidbox-adaptive-forms/: .dockerignore  Dockerfile  README.md  init-bundle.json  package-lock.json  package.json
aidbox-forms-and-kafka-topic-destination/: README.md
aidbox-forms-angular/: README.md
aidbox-forms-angular-controlled/: README.md
aidbox-forms-builder-angular/: README.md  index.html
aidbox-forms-builder-angular-controlled/: README.md  index.html
aidbox-forms-builder-custom-renderer/: .env.example  Makefile  init-bundle.json
aidbox-forms-builder-flutter-web/: pubspec.yaml
aidbox-forms-flutter-web/: README.md
aidbox-forms-renderer-angular/: README.md  index.html
aidbox-forms-renderer-angular-controlled/: README.md  index.html
aidbox-forms-renderer-offline-mode/: README.md
aidbox-forms-renderer-react-controlled/: README.md  (+1 more)
aidbox-with-python-sdk/: .env.tpl  .gitignore  Makefile  README.md  docker-compose.yaml  fhirpy_custom_models.py  fhirpy_fhir_schema_codegen.py  fhirpy_fhirtypes.py  fhirpy_raw_data.py  main.py  patients.csv  pyproject.toml  requirements.txt  type_reference_1.py  type_reference_2.py  utils.py
aidbox-with-python-sdk/tmp/: aidbox.ndjson
aidbox-with-python-sdk/tmp/hsperfdata_aidbox/: 1
(+6087 files in other folders)
